Started with fixing issues in UI tests